# rust-ws-scrcpy

./: Cargo.toml  README.md
src/: error.rs  main.rs
src/adb/: client.rs  device.rs  mod.rs
src/scrcpy/: control.rs  mod.rs  server.rs  video.rs
src/utils/: mod.rs  port.rs
src/ws/: server.rs
