[package]
name = "rust-scrcpy"
version = "0.1.0"
edition = "2021"
authors = ["zzzzyg"]

[dependencies]
# 异步运行时
tokio = { version = "1.42", features = ["full"] }

# 网络和WebSocket
tokio-tungstenite = "0.24"
futures-util = "0.3"

# HTTP服务器
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.9"
base64 = "0.22"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 错误处理
anyhow = "1.0"
thiserror = "2.0"

# 进程管理（用于ADB命令）
tokio-process = "0.2"

# 命令行参数解析
clap = { version = "4.5", features = ["derive"] }
